add medial query

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="features-inner">
             <div class="featured-item">
             <div class="video-item">
-                <iframe width="460" height="500" src="https://www.youtube.com/embed/Lwx-2R9swDg">
+                <iframe id="iframe" width="460" height="500" src="https://www.youtube.com/embed/Lwx-2R9swDg">
                 </iframe>
             </div>
             </div>
